# Choose-your-own-Adventure-Game

./: init.py
backend/: .env  main.py  pyproject.toml
backend/core/: config.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: job.py  story.py
backend/schemas/: job.py  story.py
