[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[all]>=0.128.8",
    "langchain>=0.3.30",
    "langchain-openai>=0.3.35",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.39.0",
]
